@@ -7,8 +7,8 @@ LargeClass:
   max_instance_variables: 9
 LongParameterList: 
   max_params: 3
-  exclude: 
-  - initialize
+  exclude: []
+
   enabled: true
 FeatureEnvy: 
   exclude: 
@@ -46,6 +46,6 @@ ControlCouple:
   enabled: true
 LongYieldList: 
   max_params: 3
-  exclude: 
-  - initialize
+  exclude: []
+
   enabled: true
